# spec_agent

./: .gitignore  .ruff.toml  README.md  pyproject.toml
examples/: create_data_visualization.py
src/spec_agent/: __init__.py  actors.py  llm.py  main.py  prompts.py  scheduler.py  spec.py  ui.py
