[project]
name = "spec_agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Fernando Meira", email = "fmeira.filho@gmail.com" }]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
spec-agent = "spec_agent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
